# FTP

./: .gitignore  CMakeLists.txt  README.md
include/: ftpclient.h  ftpctrl.h  ftpls.h  ftpserver.h  socket.h
src/: ftpclient.cpp  ftpctrl.cpp  ftpls.cpp  ftpserver.cpp  main.cpp  socket.cpp
